[package]
name = "md-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs-err = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdoc-json-types = { path = "../../rustdoc-json-types", version = "0.1.0" }
